<resources>
    <string name="app_name">RufEinsatz</string>
    <string name="action_settings">Settings</string>
    <string name="datum">Datum</string>
    <string name="dauer">Dauer</string>
    <string name="aufgabe">Aufgabe</string>
    <string name="todo">Was war zutun</string>
    <string name="save">Speichern</string>
    <string name="update">Ändern</string>
    <string name="invoice">Abgerechnet</string>
    <string name="action_report">Report</string>
    <string name="DayType">Tag</string>
    <string-array name="duration">
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>1 h</item>
        <item>1,5 h</item>
        <item>2 h</item>
    </string-array>
    <string-array name="arrayDayType">
        <item>Wochentag</item>
        <item>Wochenende</item>
        <item>Feiertag</item>
    </string-array>
</resources>
